- Added 'FetchPartnerRC' extension (part of Replication functionality which is ongoing)
- Added auto-detection of 'wfScript' function for MW1.11 API integration.
- Added 'ClockTick' extension (added 'ClockTickEvent' hook)
- Added 'clocktick.php' script
- Added 'TaskScheduler' extension (requires 'ClockTick' extension / 'ClockTickEvent' generator such as 'clocktick.php' script)
- Enhanced 'StubManager' to fully handle logging
- REPLICATION FUNCTIONALITY: added 'FetchPartnerRC' extension
- REPLICATION FUNCTIONALITY: added 'FetchPartnerLog' extension
- StubManager: Minor fixes (removal of some PHP warnings)
- hnpClass: Minor fixes (removal of some PHP warnings) (NO FUNCTIONAL CHANGES)
- ForeachFunctions: Minor fixes (removal of some PHP warnings)
- FileManager: disabled 'auto summary' features upon page creation
- Added some documentation files
- PageFunctions: added 'varaset', 'varaget' magic words
- PageFunctions: added 'PageVarGet' and 'PageVarSet' hooks
- Added 'RegexTools' extension
- Added 'RegexNamespaceContext' extension
- Integrated 'MakeSysop' extension
- Integrated 'DeSysop' extension
===============================
REL1_10_9: (released ...) 
- Added 'MiscParserFunctions' extension
- Added 'ImageLink' extension
- Added 'PageAfterAndBefore' extension
- Added 'Magic Words' document for tracking all Magic Words, Tags and Parser Functions supported
- Added 'NS_FILESYSTEM' to 'off-limits' for RegexNamespaceContext functionality.
TODO!!! FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bitwise operator)
- Geshi: added 'js' & 'css' tags for Javascript & CSS contents
- Added parser function 'gettagsection' to MiscParserFunctions extension
- Added 'RawPageTools' extension
- Fixed 'RegexNamespaceContext' for it to be more friendly with other extensions (e.g. AddScriptCss)
- Fixed 'ExtensionClass' for increased integration around 'ParserAfterTidy' hook
- Enhanced 'StubManager' to cover all required stubbing cases (tags, magic words etc.)
-